# Codebase_to_Txt

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: check-release-version.mjs  create-release-tag.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/application/: exporter.rs  mod.rs  scanner.rs  selection.rs
src-tauri/src/commands/: export.rs  mod.rs  scan.rs
src-tauri/src/domain/: rules.rs
src-tauri/src/infrastructure/: errors.rs  fs_scan.rs  mod.rs  pathing.rs  sorting.rs
src-tauri/src/models/: mod.rs
src/app/: AppShell.tsx  styles.css
src/features/explorer/components/: DirectoryPanel.tsx
src/features/export/components/: ExportPanel.tsx
src/features/rules/components/: RulesPanel.tsx
src/features/theme/: ThemeSwitcher.tsx
src/pages/workbench/: WorkbenchPage.tsx
src/shared/api/: tauriClient.ts
src/shared/hooks/: useTheme.ts
src/shared/types/: export.ts
